Removed bullet points in list

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <img src="img/flag.jpg" alt="flag of Summerisle">
     <h2>There are a <em>ton</em> of great local places to check out!</h2>
     <p>Click on the following links for more information:</p>
-    <ul>
+    <ul style="list-style-type:none">
       <li><a href="accommodations.html">Accommodations</a></li>
       <li><a href="activities.html">Activities</a></li>
       <li><a href="travel_arrangements.html">Travel Arrangements</a></li>
